# wiselover

./: .flutter-plugins-dependencies  README.md  START_HERE.md  flutter_rust_bridge.yaml  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
.dart_tool/extension_discovery/: vs_code.json
.dart_tool/flutter_build/: dart_plugin_registrant.dart
.dart_tool/flutter_build/5fe06a2b2ef93662acda65e1541a8c42/: .filecache  dart_build.d  dart_build.stamp  dart_build_result.json  debug_bundle_windows-x64_assets.stamp  flutter_assets.d  gen_dart_plugin_registrant.stamp  install_code_assets.d  install_code_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  outputs.json  unpack_windows.stamp  windows_engine_sources.d
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
assets/live2d/PurpleBird/: PurpleBird.model3.json
assets/live2d/juanjuan/: items_pinned_to_model.json  juanjuan.model3.json  juanjuan.physics3.json  trans.motion3.json  单头.exp3.json  头饰关.exp3.json  手势-唱歌.exp3.json  手势-鞭子.exp3.json  水印关.exp3.json  白睫毛.exp3.json
assets/sherpa/chinese/: README.md  decoder.onnx  joiner.int8.onnx
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/audio/: README.md  sherpa_model_demo.dart  sherpa_model_manager.dart
lib/src/live2d/: live2d_model_manager.dart  live2d_viewer.dart  live2d_viewer.dart.bak  live2d_widget.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
lib/src/rust/api/: live2d_core.dart  live2d_model_api.dart  wise_lover_boot_api.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: .gitattributes  Cargo.toml
rust/Live2d_Chat_Core/: Cargo.toml
rust/Live2d_Chat_Core/src/: async_invoke_method.rs
rust/Live2d_Chat_Core/src/chat_invoke_method/: chat_invoke.rs
rust/Live2d_Chat_Core/src/chat_invoke_method/chat_invoke/: history_message.rs
rust/Live2d_Chat_Core/src/utils/: base64url.rs  customjwt.rs  hmac256.rs  mod.rs  sha256.rs  time_stamp.rs
rust/Live2d_Core/: Cargo.toml  build.rs
rust/Live2d_Core/src/: core.rs  dummy_bindings.rs  lib.rs  memory.rs  sys.rs  wrapper.h
rust/Live2d_Core/src/core/: base_types.rs  internal.rs  model_types.rs
rust/Live2d_Core/src/core/internal/: platform_iface.rs  platform_impl_native.rs  platform_impl_web.rs
rust/Wise_Lover_Core/: Cargo.toml  build.rs
rust/Wise_Lover_Core/src/: frb_generated.rs  lib.rs
rust/Wise_Lover_Core/src/api/: live2d_model_api.rs  mod.rs  wise_lover_boot_api.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/cargokit/build_tool/: pubspec.yaml
rust_builder/ios/: rust_lib_wiselover.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_wiselover.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+1 files in other folders)
