[workspace]
resolver = "2"
members = [
    "Live2d_Core",
    "Live2d_Chat_Core",
    "Wise_Lover_Core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["blueokanna"]


[workspace.dependencies]
base64 = "0.22.1"
chrono = "0.4.42"
derive_more = { version = "0.99.17" }
flagset = { version = "0.4.3" }
flutter_rust_bridge = { version = "2.11.1" }
itertools = { version = "0.10.5" }
log = { version = "0.4" }
mint = { version = "0.5.9" }
num_enum = { version = "0.5.7" }
once_cell = {version = "1.21.3"}
parking_lot = { version = "0.12.1" }
regex = "1.12.2"
reqwest = { version = "0.12.26", features = ["json", "blocking", "stream"] }
rsntp = {version = "4.1.0"}
serde = "1.0.228"
serde_json = "1.0.145"
shrinkwraprs = { version = "0.3.0" }
static_assertions = { version = "1.1.0" }
thiserror = { version = "1.0" }
tokio = { version = "1.48.0", features = ["full"] }

