[package]
name = "live2d_chat_core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
once_cell.workspace = true
regex.workspace = true
reqwest.workspace = true
rsntp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
