[package]
name = "live2d_core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[features]
default = ["core"]
core = ["dep:log", "dep:static_assertions", "dep:thiserror", "dep:shrinkwraprs", "dep:derive_more", "dep:num_enum", "dep:flagset", "dep:mint", "dep:itertools", "dep:parking_lot"]

[dependencies]
log = { workspace = true, optional = true }
static_assertions = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
shrinkwraprs = { workspace = true, optional = true }
derive_more = { workspace = true, optional = true }
num_enum = { workspace = true, optional = true }
flagset = { workspace = true, optional = true }
mint = { workspace = true, optional = true }
itertools = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
pollster = "=0.2.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"
fluvio-wasm-timer = "=0.2.5"
js-sys = "0.3.60"
web-sys = { version = "0.3.69", features = [ "Node", "Window", "Document", "HtmlHeadElement", "HtmlScriptElement", "EventTarget" ] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_log = "0.2.0"
wasm-bindgen-test = "0.3"

[build-dependencies]
bindgen = "0.63.0"

